# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  setup.cfg
pre-commit-hooks/: check-clang-pragma.py  check_msvc_pragma.py
pre_commit_hooks/: check_clang_pragma.py
