[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Some custom pre-commit hooks for Sceneri
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nginetechnologies/pre-commit-hooks
author = Matt O'Sullivan
author_email = matt@sceneri.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-clang-pragma = pre_commit_hooks.check_clang_pragma:main
