[metadata]
name = pre_commit_hooks
version = 1.0.1
description = C++ related pre-commit hooks.
url = https://github.com/nginetechnologies/pre-commit-hooks
author = ngine technologies, Inc.
author_email = filip@sceneri.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    check-clang-pragma = pre_commit_hooks.check_clang_pragma:main
    check-msvc-pragma = pre_commit_hooks.check_msvc_pragma:main